Fix alignment punten

--- a/src/components/Overzicht/Overzicht.scss
+++ b/src/components/Overzicht/Overzicht.scss
@@ -12,8 +12,6 @@
             display: flex;
             justify-content: center;
             position: relative;
-            max-height: 100%;
-            max-width: 80%;
         }
 
         &-tekst {
@@ -26,6 +24,13 @@
             left: 50%;
             top: 35%;
             transform: translate(-50%, -50%);
+        }
+
+        &-figure {
+            display: flex;
+            justify-content: center;
+            max-height: 100%;
+            max-width: 80%;
         }
 
         &-img {
